welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:4: error: object Abs is not a member of package math
		r = Math.abs(21-n)+math.Abs(21-n);
                                        ^